# task-management

./: README.md  pyproject.toml  task.db
task_management/script/: web_server.py
task_management/task_api/: __ini__.py  models.py  register_tortoise.py  task.py
task_management/task_templates/: index.html  script.js  style.css
